# AiQuant

./: .gitignore  .lcovrc  CMakeLists.txt  README.md  ticks_features.csv  ticks_sample.csv  ticks_sample_pipeline.csv
.github/workflows/: ci.yml  coverage.yml  release.yml  sanitizers.yml
bindings/python/: aiquant_module.cpp
docs/: CoreLayerDesign_CppFinancialAIEngine.md  CppFinancialAIEngine.md  IOLayerDesign_CppFinancialAIEngine.md  IndicatorsLayerDesign_CppFinancialAIEngine.md  ScenarioConfig.md
include/fin/api/: ScenarioService.hpp
include/fin/app/: ScenarioConfigIO.hpp  ScenarioRunner.hpp  ScenarioSerialization.hpp  ScenarioUtils.hpp
include/fin/backtest/: Backtester.hpp
include/fin/core/: Candle.hpp  Core.hpp  Price.hpp  Ringbuffer.hpp  Symbol.hpp  Tick.hpp  Timestamp.hpp  Volume.hpp
include/fin/indicators/: ADX.hpp  ATR.hpp  BollingerBands.hpp  EMA.hpp  FeatureBus.hpp  IIndicator.hpp  IIndicatorCandle.hpp  ISessionAware.hpp  MACD.hpp  Momentum.hpp  RSI.hpp  SMA.hpp  Stochastic.hpp  VWAP.hpp  ZScore.hpp
include/fin/indicators/adapters/: CandleAdapters.hpp  MultiAdaptors.hpp  ScalarOHLCAdapters.hpp  ScalarPVAdapters.hpp  ScalarPricesAdapters.hpp
include/fin/io/: CsvReaders.hpp  Options.hpp  Pipeline.hpp  Resampler.hpp  Sources.hpp  TickSource.hpp
include/fin/ml/: FeatureVector.hpp  IModel.hpp  LinearModel.hpp  LinearTrainer.hpp
include/fin/signal/: IndicatorsSnapshot.hpp  Signal.hpp  SignalEngine.hpp
src/: main.cpp
src/fin/api/: ScenarioService.cpp
src/fin/app/: ScenarioConfigIO.cpp  ScenarioRunner.cpp  ScenarioSerialization.cpp  ScenarioUtils.cpp
src/fin/backtest/: Backtester.cpp
src/fin/core/: Candle.cpp  Price.cpp  Symbol.cpp  Tick.cpp  Volume.cpp
src/fin/indicators/: ADX.cpp  ATR.cpp  BollingerBands.cpp  EMA.cpp  FeatureBus.cpp  MACD.cpp  Momentum.cpp  RSI.cpp  SMA.cpp  Stochastic.cpp  VWAP.cpp  ZScore.cpp
src/fin/io/: CsvReaders.cpp  FileTickSource.cpp  Resampler.cpp
src/fin/ml/: FeatureVector.cpp  LinearModel.cpp  LinearTrainer.cpp
src/fin/signal/: SignalEngine.cpp
src/server/: http_main.cpp
tests/: basic_test.cpp  catch2_compat.hpp
tests/app/: TestScenarioHelpers.hpp  test_scenario_api.cpp  test_scenario_config_io.cpp
tests/backtest/: test_backtester.cpp
tests/catch2/: catch.hpp
tests/core/: test_price.cpp  test_tick.cpp  test_volume.cpp
tests/indicators/: test_adx.cpp  test_atr.cpp  test_bbands.cpp  test_ema.cpp  test_macd.cpp  test_momentum.cpp  test_pipeline_features.cpp  test_rsi.cpp  test_sma.cpp  test_stochastic.cpp  test_vwap.cpp  test_zscore.cpp
tests/io/: test_csv_readers.cpp  test_pipeline_tick_csv_to_candles.cpp  test_resampler.cpp  test_resampler_m5.cpp  test_resampler_out_of_order.cpp  test_tick_to_candle.cpp
tests/ml/: test_linear_model.cpp
tests/signal/: test_signal_engine.cpp
